Version 5.1 (?? 2014)
  * Fixed bug in tsoutliers() and tsclean() with very short seasonal series.

Version 5.0 (17 January 2014)
  * Added argument model to dshw().
  * Added bizdays() and easter() for calendar variables.
  * Added arguments max.D and max.d to auto.arima(), ndiffs() and nsdiffs().
  * Made several functions more robust to zoo objects.
  * Corrected an error in the calculation of AICc when using CV().
  * Made minimum default p in nnetar equal to 1.
  * Added tsoutliers() and tsclean() for identifying and replacing outliers
  * Improved na.interp() to handle seasonality and added argument lambda to na.interp()
  * Added robust option to forecast.ts() to allow outliers and missing values
  * Improved output from snaive() and naive() to better reflect user expectations
  * Allowed Acf() to handle missing values by using na.contiguous
  * Changed default information criterion in ets() to AICc.
  * Removed drift term in Arima() when d+D>1.
  * Added bootstrap option to forecast.Arima()

Version 4.8 (30 September 2013)
  * Fixed bug in rwf() that was introduced in v4.7

Version 4.7 (26 September 2013)
  * Added forecast.forecast() to simply return the object that is passed.
  * Removed leading zero in package number. i.e., 4.7 instead of 4.07.
  * better handling of nearly constant time series, and nearly linear time series
  * improved handling of missing values in rwf()
  * corrected fitted values and residuals in meanf() for time series data
  * bats() and tbats() now handle missing values in the same way as ets(). i.e., using longest contiguous portion.
  * better handling of very short time series
  * initial states for ets() modified for very short time series (less than 3 years).
  * nsdiffs with CH test now handles degenerate cases without returning an error.
  * nnetar now handles missing values
  * Fixed bug in forecast.varest() so residuals and fitted values computed correctly.
  * Added accuracy() calculation for VAR models